add query order by hash
